# SimpleMonGo

./: .gitignore  README.md  pyproject.toml
Incidents/: configurations.py  main.py
Incidents/src/database/: models.py  schemas.py
Stage2-Respository_Design_pattern/MongoPattern/: AbstreactRepository.py  MongoRepository.py  domain.py  runner.py  service.py
Stage2-Respository_Design_pattern/SimplePattern/: abstract_product_repository.py  appdomain.py  businessLayer.py  salRespository.py
Stage3-pydantic/Learn_pydantic_001/src/: 001_sample.py  002_simple_models.py
